# generative-ai-example

./: .env.sample  README.md  pyproject.toml
blog/: amazon_bedrock_stable_diffusion_xl_v1.ipynb  amazon_bedrock_titan_image_generator_g1.ipynb  openai_dall-e-3.ipynb
