[tool.poetry]
name = "generative-ai-example"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.62"
pillow = "^10.2.0"
ipyplot = "^1.1.2"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
